# ROS_projects

./: README.md
ROS_projects_study/: task3_2
ROS_projects_study/msg_create/devel/: .catkin  .rosinstall  setup.sh
ROS_projects_study/msg_create/src/mymessage/: CMakeLists.txt  package.xml
ROS_projects_study/msg_exch/devel/: .catkin  .rosinstall  setup.sh
ROS_projects_study/msg_exch/src/agents/: CMakeLists.txt
ROS_projects_study/msg_exch/src/agents/src/: reader.cpp  writer.cpp
ROS_projects_study/rviz_work/devel/: .catkin  .rosinstall  setup.sh
ROS_projects_study/rviz_work/src/rviz_manipulate/: CMakeLists.txt
ROS_projects_study/service_use/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
ROS_projects_study/service_use/src/client_server/: CMakeLists.txt
ROS_projects_study/service_use/src/my_service/: CMakeLists.txt  package.xml
ROS_projects_study/task1/devel/: .catkin  .rosinstall  setup.sh
ROS_projects_study/task1/src/hello_world/: CMakeLists.txt
ROS_projects_study/task1/src/talkers/: CMakeLists.txt
ROS_projects_study/task2_1/devel/: .catkin  .rosinstall  setup.sh
ROS_projects_study/task2_1/src/package/: CMakeLists.txt
ROS_projects_study/task2_1_2/devel/: .catkin  .rosinstall  setup.sh
ROS_projects_study/task2_3/devel/: .catkin  .rosinstall  setup.sh
ROS_projects_study/task3_1_1/devel/: .catkin  .rosinstall  setup.sh
ROS_projects_study/task3_1_2/devel/: .catkin  .rosinstall  setup.sh
ROS_projects_study/task3_3/devel/: .catkin  .rosinstall  setup.sh
ROS_projects_study/tf_example/: frames.gv
(+103 files in other folders)
